deploy/k8s/base/swagger-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: swagger-ui
  labels:
    app.kubernetes.io/name: swagger-ui
    app.kubernetes.io/part-of: polaris
spec:
  selector:
    app.kubernetes.io/name: swagger-ui
  ports:
    - name: http
      port: 8080
      targetPort: http
